--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,3 +93,13 @@ body {
     color-scheme: dark;
   }
 }
+
+.container {
+  height: 100vh;
+  width: 100vw;
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+}
