--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,9 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
+  font-size: 110%;
 }
 
 @media (prefers-color-scheme: dark) {
